--- a/static/index.html
+++ b/static/index.html
@@ -138,9 +138,10 @@
                 "4 bachata, 1 salsa",
                 "1 salsa, 1 bachata",
                 "2 salsa, 2 bachata",
+                "salsa",
+                "3 cubana, 1 bachata",
                 "zouk",
                 "kizomba",
-                "3 cubana, 1 bachata",
                 "не визначено"
             ],
             locations: [
