--- a/static/index.html
+++ b/static/index.html
@@ -140,6 +140,7 @@
                 "2 salsa, 2 bachata",
                 "salsa",
                 "3 cubana, 1 bachata",
+                "5 bachata, 1 kizomba",
                 "zouk",
                 "kizomba",
                 "не визначено"
@@ -156,6 +157,7 @@
                 "лівобережна студія, вул. Дніпровська набережна 19, м. Осокорки",
                 "Raíces Dance Studio, вул. Кирилівська,4, м. Контрактова площа",
                 "студія CasaDeRitmo, м.Олімпійська, Вул. Жилянська, 5б, код 11К",
+                "Boho Restorant, Вул . Івана Мазепи , 1. м. Арсенальна",
                 "депо, вулиця Васильківська 23/6",
                 "Гонцо бар, вул. Коперника 2, м. лукянівська",
                 "котокафе, м. Вокзальна",
